--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>UnityScript to C# Translator</title>
     <meta charset="utf-8" />
     <style>
+      body {
+        background-color: #333;
+      }
+
       .container {
         display: flex;
         justify-content: center;
@@ -13,6 +17,9 @@
       textarea {
         width: 100%;
         height: calc(50vh - 64px);
+        background-color: #444;
+        color: white;
+        border: 2px black dashed;
       }
     </style>
     <script src="app.js"></script>
