to english in html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,16 +36,16 @@
     <div class="container">
       <textarea
         id="unityScript"
-        placeholder="Ingrese el código UnityScript aquí"
+        placeholder="Insert UnityScript code here"
       ></textarea>
     </div>
     <br />
     <center>
-      <button onclick="translateCode(document.getElementById('fileName').value)">Traducir</button>
+      <button onclick="translateCode(document.getElementById('fileName').value)">Port</button>
     </center>
     <br />
     <div class="container">
-      <textarea id="csharp" placeholder="Traducción a C#"></textarea>
+      <textarea id="csharp" placeholder="C# migration"></textarea>
     </div>
   </body>
 </html>
